# webcolors

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini  webcolors.py  webcolors.pyi
.github/workflows/: ci.yml
docs/: Makefile  changelog.rst  colors.rst  conf.py  conformance.rst  contents.rst  conventions.rst  faq.rst  index.rst  install.rst  make.bat  requirements.txt  spelling_wordlist.txt
src/: webcolors.py
src/webcolors/: __init__.py  conversion.py  html5.py  normalization.py
tests/: definitions.py  full_colors.py  test_conformance.py  test_conversion.py  test_hexadecimal.py  test_html5.py  test_integer.py  test_name.py  test_normalization.py  test_percent.py
