[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "James Bennett", email = "james@b-list.org"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
name = "webcolors"
description = "A library for working with the color formats defined by HTML and CSS."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.7"
version = "1.13a1"

[project.urls]
documentation = "https://webcolors.readthedocs.io"
homepage = "https://github.com/ubernostrum/webcolors"

[tool.black]
target-version = ["py37"]

[tool.coverage.report]
fail_under = 100

[tool.isort]
known_first_party = ["webcolors"]
known_third_party = ["bs4", "html5lib", "requests"]
profile = "black"
