[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "James Bennett", email = "james@b-list.org"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
name = "webcolors"
description = "A library for working with the color formats defined by HTML and CSS."
dynamic = ["version"]
keywords = ["color", "css", "html", "web"]
license = {text = "BSD-3-Clause"}
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
documentation = "https://webcolors.readthedocs.io"
homepage = "https://github.com/ubernostrum/webcolors"

[project.optional-dependencies]
docs = [
  "furo",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-notfound-page",
  "sphinxext-opengraph",
]
tests = [
  "pytest",
  "pytest-cov",
]

[tool.bandit]
skips = ["B101"]

[tool.black]
target-version = ["py37"]

[tool.coverage.report]
fail_under = 100

[tool.interrogate]
ignore-init-module = true

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
version = {attr = "webcolors.__version__"}
