[metadata]
author = James Bennett
author_email = james@b-list.org
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Utilities
description = A library for working with color names and color values formats defined by HTML and CSS.
license = BSD 3-Clause
licnese_file = LICENSE
long_description = file: README.rst
name = webcolors
url = https://github.com/ubernostrum/webcolors
version = 1.9.1

[options]
zip_safe = False

[bdist_wheel]
universal = 1

[coverage:run]
include =
  webcolors
  tests

[coverage:report]
fail_under = 100

[flake8]
exclude = __pycache__,.pyc
max-complexity = 13

[isort]
known_first_party = webcolors
known_third_party =
  bs4
  html5lib
  requests
  six
lines_after_imports = 2
multi_line_output = 5