[metadata]
author = James Bennett
author_email = james@b-list.org
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Web Environment
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Utilities
description = A library for working with color names and color values formats defined by HTML and CSS.
license = BSD 3-Clause
license_file = LICENSE
long_description = file: README.rst
name = webcolors
url = https://github.com/ubernostrum/webcolors
version = 1.12

[options]
zip_safe = False

[coverage:report]
fail_under = 100

[flake8]
extend-ignore = E203
max-complexity = 13
max-line-length = 88

[isort]
profile = black
known_first_party = webcolors
known_third_party =
  bs4
  html5lib
  requests
